--- a/paper_param.ipynb
+++ b/paper_param.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# parameter\n",
     "alpha = 0.1\n",
-    "ratio = 0.1"
+    "ratio = 0.1\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
    ],
    "source": [
     "print(result)\n",
-    "print('')"
+    "print('XXXXXXXXx')"
    ]
   }
  ],
