--- a/paper_param.ipynb
+++ b/paper_param.ipynb
@@ -49,7 +49,8 @@
    ],
    "source": [
     "print(result)\n",
-    "print('XXXXXXXXx')"
+    "print('XXXXXXXXx')\n",
+    "print('x')"
    ]
   }
  ],
